@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfburn-9999.ebuild 785 RMD160 be15dcff237d36e82bd8bca181f1c129f9648365 SHA1 87ce8dcb32141c38257cc73b56e3e3a3a8c58a94 SHA256 1734276b35b4320d8e9f1119c0dd7f7192bbbe1e7365cf1b1273cd51295eeba3
-MISC ChangeLog 1460 RMD160 4e04a4f370effcd101d2f574f9c68b3fc2338dbd SHA1 b230bbfd3ea067f09bebd8f4c715a2d38db58ff9 SHA256 a6833caf145709b0822d7cbbc9aa5a4d57e9e0158dd0734de7e6a441325b957d
+EBUILD xfburn-9999.ebuild 864 RMD160 ee03e731d27919c907eecab734dfcd56d5db9ae9 SHA1 f5c9d1698df0eed621c327cdb21a3b56d965fe02 SHA256 74aedc09627aae775393822d41816d2db0bc76dfed4232a28aecef637497e572
+MISC ChangeLog 1555 RMD160 d7d442d8ec70674cd2e2055883163ccb139e7496 SHA1 07652333a34e7b775fd037d10bb776a4d821d8bb SHA256 38ab48add9ad14ad3bba3d22ab1ab3f3c886809d2930c231d192715692ccc510
 MISC metadata.xml 244 RMD160 12c5d9cc4bf4ac11904a2ac67a1dc5317b21c940 SHA1 341081a79f570112e2ac0bc0feefc369505396b2 SHA256 79e3e34001e21fc1a7866ec42b167d80927f7757a01f614dc24261ffed4db87d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa91zwCgyzdTODEGZg31jhmG7ro9TJoT
-zwUAoNAQKT+HgUrs+7Phdq2ZRiWT668H
-=tqU4
+iEYEARECAAYFAkkXd3sACgkQKhnDs22gwa+LIACeMRdaRowvIvDreEc3RTizWM8p
+jQkAnRkm7KXUGgqNdqIPXWNib+oskxL+
+=4SfD
 -----END PGP SIGNATURE-----
