@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Nov 2008; Christoph Mende <angelos@gentoo.org> xfburn-9999.ebuild:
+  Added USE=gstreamer
+
   28 Jun 2008; Christoph Mende <angelos@gentoo.org> xfburn-9999.ebuild:
   Added --enable-final
 
